Sun Sep 19 12:11:03 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* som_runcom.c(command_run): Update comments.

Sat Sep 10 18:46:57 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Require autoconf 2.64 at least.

Sun Jan 10 17:06:20 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* somanager.cmhg: Increase version number to 2.03 as
	changes were made since GCCSDK GCC 4.1.1 Release 2.

Sun Jan 10 13:36:01 2010  Lee Noar  <leenoar@sky.com>

	* som_history.c(som_history_add_client): Remove
	unused variable.
	* somanager.cmhg: Remove unused errors.
	Rename somerr_dl_no_got to somerr_no_got_loader.
	Add somerr_no_got_client, somerr_no_seg_client,
	somerr_no_seg_loader.
	* som_runcom.c(register_dynamic_loader, register_client):
	The dynamic segment always seems to follow the R/W
	segment, however don't rely on it. Use two independent
	loops to find the required segments in the right order.
	Small improvements to error checking.

Sun Nov 22 16:06:14 2009  Lee Noar  <leenoar@sky.com>

	* som_register.c(deregister_shared_object): Don't
	bother finding the client when the only caller already
	knows it.
	(som_deregister_client): If an error occurs when
	deregistering a library, continue to deregister the
	client rather than aborting the process.

	* dist/!SharedLibs/docs/!ReadMe: Update docs.

Wed Oct 21 19:55:01 2009  Lee Noar  <leenoar@sky.com>

	* som_final.c(module_finalisation): If things really
	go wrong and we end up with a negative client count,
	then we still want to be able to quit.

Tue Oct 13 19:35:23 2009  Lee Noar  <leenoar@sky.com>

	* som_runcom.c(read_ld_env): Looks like my logic
	got a bit mixed up here. Only worked for !runimage
	and *-bin. Simplify and fix.

Sun Oct 11 14:10:45 2009  Lee Noar  <leenoar@sky.com>

	New feature addition. Record basic details of last
	five clients to deregister. *SOMHistory displays
	the list. Useful for debugging when you need to know
	where an address lies within the client. If the